@@ -1,2 +1,3 @@
 * Thinking about adding a feature that would allow calculating a balance in the past..
 * Maybe add the ability to automagically calculate interest.. Be^(rt) and all..
+* Perhaps allow -[BCD] to specify any date, not just a future date
